<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nowshowing"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
    </group>

</menu>
